--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Tengiz Meskhi | tengmesk.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -68,7 +68,8 @@
 							<ul class="icons">
 								<li><a href="https://linkedin.com/in/tmeskhi" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://twitter.com/tengmesk" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://github.com/tengmesk" class="fa-github">Github</a></li>
+								<!--<li><a href="https://github.com/tengmesk" class="fa-github">Github</a></li>-->
+								<li><a href="https://1drv.ms/b/s!AgUiIbIMgpkBlmqOlD9HWFUn_TKE" class="fa-file-text">CV</a></li>
 							</ul>
 						</footer>
 					</section>
