--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Tengiz Meskhi | Cambridge and McKinsey alum, currently Deputy CIO, Head of Agile @ Bank of Georgia, based in Tbilisi | tengmesk.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,20 +21,26 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Tengiz Meskhi</h1>
-						<p>Deputy CIO, Head of Agile @ Bank of Georgia &nbsp;&bull;&nbsp; Tbilisi, Georgia</p>
+						<p>Deputy CIO, Head of Agile @ Bank of Georgia<br>
+                        Cambridge Bioe  ngineering grad and Digital McKinsey alum &nbsp;&bull;&nbsp; Tbilisi, Georgia </p>
 						<nav>
 							<ul>
                                 <li><a href="https://linkedin.com/in/tmeskhi" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://twitter.com/tengmesk" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                 <!-- Add blog link here -->
-								<li><a href="https://1drv.ms/b/s!AgUiIbIMgpkByW4hAC6_WkSExASO" class="icon solid fa-envelope"><span class="label"CV</span></a></li>
+								<li><a href="https://1drv.ms/b/s!AgUiIbIMgpkByW4hAC6_WkSExASO" class="icon solid fa-file-alt"><span class="label"CV</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Tengiz Meskhi 2020.</span>
+						<span class="copyright">&copy; Tengiz Meskhi  
+                            <script type="text/javascript">
+                            var theDate=new Date()
+                            document.write(theDate.getFullYear())
+                            </script>.
+                        </span>
 					</footer>
 
 			</div>
