Add headshot and shadow to text and icons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 				<!-- Header -->
 					<header id="header">
+                        <img src="images/TMHeadshotrounded.png" alt="Tengiz Meskhi">
 						<h1>Tengiz Meskhi</h1>
 						<p>Deputy CIO, Head of Agile @ Bank of Georgia<br>
-                        Cambridge Bioe  ngineering grad and Digital McKinsey alum &nbsp;&bull;&nbsp; Tbilisi, Georgia </p>
+                        Cambridge Bioengineering grad and Digital McKinsey alum &nbsp;&bull;&nbsp; Tbilisi, Georgia </p>
 						<nav>
 							<ul>
                                 <li><a href="https://linkedin.com/in/tmeskhi" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
