Move location up next to current job title

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<header id="header">
                         <img src="images/TMHeadshotrounded.png" alt="Tengiz Meskhi">
 						<h1>Tengiz Meskhi</h1>
-						<p>Deputy CIO, Head of Agile @ Bank of Georgia<br>
-                        Cambridge Bioengineering grad and Digital McKinsey alum &nbsp;&bull;&nbsp; Tbilisi, Georgia </p>
+						<p>Deputy CIO, Head of Agile @ Bank of Georgia &nbsp;&bull;&nbsp; Tbilisi, Georgia<br>
+                        Cambridge Bioengineering grad and Digital McKinsey alum</p>
 						<nav>
 							<ul>
                                 <li><a href="https://linkedin.com/in/tmeskhi" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
