Add Georgian language support

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+                        <a href="ka.html" alt="tengmesk.com ქართულში">🇬🇪 ქართული</a>
 						<span class="copyright">&copy; Tengiz Meskhi  
                             <script type="text/javascript">
                             var theDate=new Date()
